fixed slider overflow

--- a/slider.css
+++ b/slider.css
@@ -7,7 +7,7 @@
 .slide {
     position: absolute;
     min-height: 800px;
-    width: 100%;
+    width: 100.05%;
     transition: transform 1s;
 }
 
